# PixiDemo

./: .gitignore  CMakeLists.txt  README.md  pixi.toml  recipe.yaml
src/: CMakeLists.txt  main.cpp
src/widget/: CMakeLists.txt  widget.cpp  widget.hpp  widget_impl.hpp
